[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/player_world_menu/themes/player-world-menu.theme" type="Theme" id=1]
[ext_resource path="res://ui/player_battle_menu/scripts/player-battle-menu.gd" type="Script" id=2]
[ext_resource path="res://ui/player_battle_menu/scripts/idle.gd" type="Script" id=3]
[ext_resource path="res://ui/player_battle_menu/scripts/interact.gd" type="Script" id=4]
[ext_resource path="res://ui/player_battle_menu/scripts/exit.gd" type="Script" id=5]
[ext_resource path="res://assets/spritesheets/greybox_tiles/greybox_tiles_spritesheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[node name="PlayerBattleMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="State" type="Node" parent="."]

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 3 )

[node name="Interact" type="Node" parent="State"]
script = ExtResource( 4 )

[node name="Exit" type="Node" parent="State"]
script = ExtResource( 5 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 124.534
margin_right = 100.0
margin_bottom = 224.534
rect_min_size = Vector2( 200, 200 )
texture = SubResource( 1 )

[node name="MenuButtons" type="VBoxContainer" parent="Background" groups=[
"focus_objects",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -66.0
margin_right = 73.5
margin_bottom = 66.0

[node name="Attack" type="Button" parent="Background/MenuButtons"]
margin_right = 147.0
margin_bottom = 30.0
text = "Attack"

[node name="Skills" type="Button" parent="Background/MenuButtons"]
margin_top = 34.0
margin_right = 147.0
margin_bottom = 64.0
text = "Skills"

[node name="Items" type="Button" parent="Background/MenuButtons"]
margin_top = 68.0
margin_right = 147.0
margin_bottom = 98.0
text = "Items"

[node name="Wait" type="Button" parent="Background/MenuButtons"]
margin_top = 102.0
margin_right = 147.0
margin_bottom = 132.0
text = "Wait"

[connection signal="pressed" from="Background/MenuButtons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Background/MenuButtons/Wait" to="." method="_on_Wait_pressed"]
